--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <html>
   <head>
     <title>Flatiron Grouper</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
     <script src="app.js"></script>
   </head>
   <body ng-app="flatironGrouper" ng-controller="MainCtrl">
-    <div>
-      {{test}}
-    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-6">
 
-    <div ng-repeat="group in groups | orderBy: 'rank'">
-      The {{group.name}} are a {{group.status}}
+          <div class="page-header">
+            <h1>Flatiron Grouper</h1>
+          </div>
+
+          <div ng-repeat="group in groups | orderBy: 'rank'">
+            <button ng-click="incrementRank(group)">Up</button>
+            <button ng-click="decrementRank(group)">Down</button>
+            {{group.name}} are ranked {{group.rank}}
+            <div ng-show="group.status">The {{group.name}} are {{group.status}}</div>
+          </div>
+
+          <form ng-submit="addGroup()">
+            <input type="text" ng-model="name" placeholder="name"></input>
+            <input type="text" ng-model="rank" placeholder="rank"></input>
+            <input type="text" ng-model="status" placeholder="status"></input>
+            <input type="submit" value="Add a Group">
+          </form>
+        </div>
+
+      </div>
     </div>
 
   </body>
