--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
     <title>Flatiron Grouper</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="app.js"></script>
   </head>
-  <body ng-app="flatironGrouper" ng-controller="MainCtrl">
+  <body ng-app="flatironGrouper">
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-6">
-
           <div class="page-header">
             <h1>Flatiron Grouper</h1>
           </div>
+          <ui-view></ui-view>
+        </div>
+      </div>
+    </div>
+
+
+      <script type="text/ng-template" id="/home.html">
 
           <div ng-repeat="group in groups | orderBy: 'rank'">
             <button ng-click="incrementRank(group)">Up</button>
@@ -27,10 +34,21 @@
             <input type="text" ng-model="status" placeholder="status"></input>
             <input type="submit" value="Add a Group">
           </form>
-        </div>
 
+    </script>
+
+    <script type="text/ng-template" id="/groups.html">
+      <div class="page-header">
+        <h3>{{group.name}} {{group.rank}}</h3>
       </div>
-    </div>
+      <div ng-repeat="student in group.students">
+        {{student.name}}
+      </div>
+      <form ng-submit="addStudent()">
+        <input type="text" ng-model="name" placeholder="name"></input>
+        <input type="submit" value="Add a Student">
+      </form>
+    </script>
 
   </body>
 </html>
